--- a/sueDreams/sueWeb/src/main/webapp/templates/template.xhtml
+++ b/sueDreams/sueWeb/src/main/webapp/templates/template.xhtml
@@ -1,13 +1,58 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
-    xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:a4j="http://richfaces.org/a4j">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
+
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html">
+
+
+<h:form>
+<style type="text/css">
+		        body {
+		            background-image: url(resources/azul5.jpg);	           
+		            width: 100%; 
+   					height: 100%; 
+    				position: absolute; 
+    left: 0px; 
+    top: 0px; 
+    z-index: 0;					
+		        }
+		.cols{
+            vertical-align:top;
+        }
+        .col100{
+            width: 100%;
+        }
+	
+        </style>
 <h:head>
-    <title>RichFaces Application</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    </h:head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<title><ui:insert name="title" /></title>
+	
+</h:head>
 
 <h:body>
-        <ui:insert name="body">Default content</ui:insert>
+	<h:panelGrid columns="1" columnClasses="col100">
+		<h:panelGrid columns="1" id="titulo">
+		<img src="resources/sueBanner.png" height="100" width="500" />
+		</h:panelGrid>
+
+
+
+		<h:panelGrid columns="2" id="cuerpo"  columnClasses="cols,cols">
+			<h:panelGrid columns="1" id="menu" >
+				<ui:include src="menu.xhtml"/>
+			</h:panelGrid>
+
+			<h:panelGrid columns="1" id="aplicacion">
+				<ui:insert name="aplicacion" />
+			</h:panelGrid>
+
+
+		</h:panelGrid>
+	</h:panelGrid>
 </h:body>
+</h:form>
 </html>
