Configuracion de propiedadaes para el Framework

--- a/sueDreams/sueWeb/src/main/webapp/templates/menu.xhtml
+++ b/sueDreams/sueWeb/src/main/webapp/templates/menu.xhtml
@@ -8,7 +8,7 @@
 
 
 	<h:form id="form">
-		<rich:panelMenu style="width:200px" mode="ajax"
+		<rich:panelMenu mode="ajax" styleClass="styleMenu"
 			iconExpandedGroup="disc" iconCollapsedGroup="disc"
 			iconExpandedTopGroup="chevronUp" iconGroupTopPosition="right"
 			iconCollapsedTopGroup="chevronDown">
