--- a/sueDreams/sueWeb/src/main/webapp/resources/css/estilos.css
+++ b/sueDreams/sueWeb/src/main/webapp/resources/css/estilos.css
@@ -15,3 +15,25 @@
 .col100 {
 	width: 100%;
 }
+
+.styleBuilding {
+	height: 50%;
+	width: 30%;
+	position: absolute;
+}
+
+.styleBanner {
+	height: 140%;
+	width: 120%;
+	position: relative;
+}
+.styleMenu{
+	width: 200px;
+	
+	
+}
+
+.styleLine{
+height: 1px;
+width: 250%;
+}
