--- a/sueDreams/sueWeb/src/main/webapp/templates/menu.xhtml
+++ b/sueDreams/sueWeb/src/main/webapp/templates/menu.xhtml
@@ -5,66 +5,64 @@
 	xmlns:a4j="http://richfaces.org/a4j"
 	xmlns:rich="http://richfaces.org/rich">
 
-
-
-	<h:form id="form">
+	<h:form>
 		<rich:panelMenu mode="ajax" styleClass="styleMenu"
 			iconExpandedGroup="disc" iconCollapsedGroup="disc"
 			iconExpandedTopGroup="chevronUp" iconGroupTopPosition="right"
 			iconCollapsedTopGroup="chevronDown">
 			<rich:panelMenuGroup label="#{menu.opcion1}">
 				<rich:panelMenuItem label="#{menu.opcion1_1}"
-					action="#{panelMenu.updateCurrent}">
+					action="commandButton">
 					<f:param name="current" value="Item 1.1" />
 				</rich:panelMenuItem>
 				<rich:panelMenuItem label="#{menu.opcion1_2}"
-					action="#{panelMenu.updateCurrent}">
+					action="commandButton">
 					<f:param name="current" value="Item 1.2" />
 				</rich:panelMenuItem>
 				<rich:panelMenuItem label="#{menu.opcion1_3}"
-					action="#{panelMenu.updateCurrent}">
+					action="commandButton">
 					<f:param name="current" value="Item 1.3" />
 				</rich:panelMenuItem>
 			</rich:panelMenuGroup>
 			<rich:panelMenuGroup label="#{menu.opcion2}">
 				<rich:panelMenuItem label="#{menu.opcion2_1}"
-					action="#{panelMenu.updateCurrent}">
+					action="commandButton">
 					<f:param name="current" value="Item 2.1" />
 				</rich:panelMenuItem>
 				<rich:panelMenuItem label="#{menu.opcion2_2}"
-					action="#{panelMenu.updateCurrent}">
+					action="commandButton">
 					<f:param name="current" value="Item 2.2" />
 				</rich:panelMenuItem>
 				<rich:panelMenuItem label="#{menu.opcion2_3}"
-					action="#{panelMenu.updateCurrent}">
+					action="commandButton">
 					<f:param name="current" value="Item 2.3" />
 				</rich:panelMenuItem>
 				<rich:panelMenuGroup label="#{menu.opcion2_4}">
 					<rich:panelMenuItem label="#{menu.opcion2_4_1}"
-						action="#{panelMenu.updateCurrent}">
+						action="commandButton">
 						<f:param name="current" value="Item 2.4.1" />
 					</rich:panelMenuItem>
 					<rich:panelMenuItem label="#{menu.opcion2_4_2}"
-						action="#{panelMenu.updateCurrent}">
+						action="commandButton">
 						<f:param name="current" value="Item 2.4.2" />
 					</rich:panelMenuItem>
 					<rich:panelMenuItem label="#{menu.opcion2_4_3}"
-						action="#{panelMenu.updateCurrent}">
+						action="commandButton">
 						<f:param name="current" value="Item 2.4.3" />
 					</rich:panelMenuItem>
 				</rich:panelMenuGroup>
 			</rich:panelMenuGroup>
 			<rich:panelMenuGroup label="#{menu.opcion3}">
 				<rich:panelMenuItem label="#{menu.opcion3_1}"
-					action="#{panelMenu.updateCurrent}">
+					action="commandButton">
 					<f:param name="current" value="Item 3.1" />
 				</rich:panelMenuItem>
 				<rich:panelMenuItem label="#{menu.opcion3_2}"
-					action="#{panelMenu.updateCurrent}">
+					action="commandButton">
 					<f:param name="current" value="Item 3.2" />
 				</rich:panelMenuItem>
 				<rich:panelMenuItem label="#{menu.opcion3_3}"
-					action="#{panelMenu.updateCurrent}">
+					action="commandButton">
 					<f:param name="current" value="Item 3.3" />
 				</rich:panelMenuItem>
 			</rich:panelMenuGroup>
