Implementacion j2ee terminada

--- a/sueDreams/sueWeb/.settings/org.eclipse.wst.common.component
+++ b/sueDreams/sueWeb/.settings/org.eclipse.wst.common.component
@@ -7,6 +7,12 @@
         <dependent-module archiveName="sueJar-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/sueJar/sueJar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="sueJ2EEInterfaces-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/sueJ2EEInterfaces/sueJ2EEInterfaces">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="sueJ2EEBeans-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/sueJ2EEBeans/sueJ2EEBeans">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="sueWeb"/>
         <property name="java-output-path" value="/sueWeb/target/classes"/>
     </wb-module>
