Fin Prueba de Renderizado.....Prueba OK

--- a/sueDreams/sueWeb/src/main/webapp/templates/template.xhtml
+++ b/sueDreams/sueWeb/src/main/webapp/templates/template.xhtml
@@ -8,9 +8,10 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	 xmlns:sue="http://java.sun.com/jsf/composite/componentes"
 	 xmlns:a4j="http://richfaces.org/a4j">
+<h:head>
+</h:head>
 
-
-<h:form>
+<h:form prependId="false">
 	
 		<link href="#{request.contextPath}/estilos/css/estilos.css" rel="stylesheet"
 			type="text/css" />
