--- a/sueDreams/sueTutorialJar/.settings/org.eclipse.wst.common.component
+++ b/sueDreams/sueTutorialJar/.settings/org.eclipse.wst.common.component
@@ -3,5 +3,8 @@
   <wb-module deploy-name="sueTutorialJar">
     <wb-resource deploy-path="/" source-path="src/main/java"/>
     <wb-resource deploy-path="/" source-path="src/main/resources"/>
+        <wb-resource deploy-path="/" source-path="/src/main/java"/>
+        <wb-resource deploy-path="/" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/" source-path="/src/test/java"/>
   </wb-module>
 </project-modules>
