--- a/sueDreams/sueJ2EEBeans/.settings/org.eclipse.wst.common.component
+++ b/sueDreams/sueJ2EEBeans/.settings/org.eclipse.wst.common.component
@@ -2,5 +2,6 @@
 <project-modules id="moduleCoreId" project-version="1.5.0">
   <wb-module deploy-name="sueJ2EEBeans">
     <wb-resource deploy-path="/" source-path="src/main/java"/>
+        <wb-resource deploy-path="/" source-path="/resources"/>
   </wb-module>
 </project-modules>
