Adicion template , banner y fondos

--- a/projectPrimeFaces/principal/principal-web/src/main/webapp/resources/css/screen.css
+++ b/projectPrimeFaces/principal/principal-web/src/main/webapp/resources/css/screen.css
@@ -38,6 +38,6 @@ span.invalid {
     padding-left: 3px;
     color: red;
 }
-.foo td {
-    vertical-align: top;
+.colTop {
+	vertical-align: top;
 }
