--- a/projectPrimeFaces/principal/principal-web/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/projectPrimeFaces/principal/principal-web/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -15,7 +15,7 @@
 <h:form prependId="false">
 			
 		<f:loadBundle basename="propiedades.template" var="template" />
-		<p:growl id="messages"/>  
+		<p:growl id="mensajes"/>  
 	<h:head>
 		<title>Java EE 6 Starter Application</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -36,11 +36,11 @@
 					<h:panelGrid columns="1" id="menu">
 					 <p:panelMenu style="width:200px">  
         <p:submenu label="Ajax Menuitems">  
-            <p:menuitem value="Save" actionListener="#{buttonBean.save}" icon="ui-icon-disk" />  
-            <p:menuitem value="Update" actionListener="#{buttonBean.update}"  icon="ui-icon-arrowrefresh-1-w" />  
+            <p:menuitem value="Save" actionListener="#{menuBeans.save}"  icon="ui-icon-disk" update="aplicacion,mensajes" />  
+            <p:menuitem value="Update" actionListener="#{menuBeans.update}"  icon="ui-icon-arrowrefresh-1-w" update="aplicacion,mensajes" />  
         </p:submenu>  
         <p:submenu label="Non-Ajax Menuitem">  
-            <p:menuitem value="Delete" actionListener="#{buttonBean.delete}"  ajax="false" icon="ui-icon-close"/>  
+            <p:menuitem value="Delete" actionListener="#{menuBeans.delete}"  ajax="false" icon="ui-icon-close"/>  
         </p:submenu>  
         <p:separator />  
         <p:submenu label="Navigations" >  
