--- a/projectPrimeFaces/principal/principal-ear/.settings/org.eclipse.wst.common.component
+++ b/projectPrimeFaces/principal/principal-ear/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project-modules id="moduleCoreId" project-version="1.5.0">
+<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="principal">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/ear-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/application" tag="defaultRootSource"/>
@@ -7,6 +6,9 @@
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module archiveName="principal-ejb-1.0-SNAPSHOT.jar" deploy-path="/" handle="module:/resource/principal-ejb/principal-ejb">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="principal-commun-1.0-SNAPSHOT.jar" deploy-path="/lib" handle="module:/resource/principal-commun/principal-commun">
             <dependency-type>uses</dependency-type>
         </dependent-module>
     </wb-module>
