--- a/projectPrimeFaces/principal/principal-web/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/projectPrimeFaces/principal/principal-web/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -35,8 +35,8 @@
 					<h:panelGrid columns="1" id="menu">
 					 <p:panelMenu style="width:200px">
 						<p:submenu label="Administración">
-							<p:menuitem value="Creación de estudiantes" 
-								ajax="false" icon="ui-icon-disk" action="/administracionEstudiantes" immediate="true" />
+							<p:menuitem value="Creación de personas" 
+								ajax="false" icon="ui-icon-disk" action="/administracionPersonas" immediate="true" />
 							<p:menuitem value="Pruebas" 
 								ajax="false" icon="ui-icon-disk" action="/pruebas" immediate="true"  />
 						</p:submenu>
