Creacion de Exportacion

--- a/projectPrimeFaces/principal/principal-web/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/projectPrimeFaces/principal/principal-web/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -22,10 +22,10 @@
 	</h:head>
 
 	<h:body styleClass="cuerpo" style="background-image: url(#{request.contextPath}/#{template.colorFondo});">
-			<h:panelGrid columns="1" columnClasses="col100">
-				<h:panelGrid columns="1" id="titulo">
+			<div class="col100">
+				<div class="1" id="titulo">
 					<img src="#{request.contextPath}/#{template.imagenBanner}" class="styleBanner" />
-				</h:panelGrid>
+				</div>
 				<p id="SaltoLinea1"/>			
 				<hr class="styleLine" style="background-color: #{request.contextPath}/#{template.colorLinea};"/>
 				<p id="SaltoLinea2"/>
@@ -64,7 +64,7 @@
 
 
 				</h:panelGrid>
-			</h:panelGrid>
+			</div>
 		</h:body>
 	
 </h:form>
