Ajustes Frame Vacio

--- a/projectPrimeFaces/branches/proyectoDesarrollo/principal-web/src/main/webapp/resources/css/screen.css
+++ b/projectPrimeFaces/branches/proyectoDesarrollo/principal-web/src/main/webapp/resources/css/screen.css
@@ -41,3 +41,22 @@ span.invalid {
 .colTop {
 	vertical-align: top;
 }
+div.menu{
+text-align: center;
+}
+.menu div.ui-menubar {
+text-align: center;
+}
+.menu .ui-menu-list{
+width:100%;
+display: inline-flex;
+}
+div.menu>ul.ui-menu-list>li>a{
+width: 100%;
+}
+div.menu>ul.ui-menu-list>li{
+width: 100%;
+}
+.ui-menuitem-text{
+float: none!important;
+}
